# rfp-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REPORT.md  [AI] 중급 프로젝트 가이드 f33fc8105e0d827cb4cc81937a3337e5.md  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: eval-gate-analyst.md  langgraph-reviewer.md  portfolio-adversary.md
.codex/: hooks.json
.codex/agents/: eval-gate-analyst.toml  langgraph-reviewer.toml  portfolio-adversary.toml
.codex/hooks/: pretooluse_env_guard.py
.github/workflows/: ci.yml  hosted-demo-smoke.yml
deliverables/: RFP_RAG_Baseline_Report.md  rfp-rag-baseline-presentation.pptx
deploy/hf-space/: Dockerfile  README.md
docs/adr/: 0001-llm-observability-tool.md  0002-rag-eval-judge-library.md  0003-agent-orchestration-framework.md  0004-vector-store.md  0005-open-lane-backend-and-judge-strategy.md  0006-codex-agent-surface-redesign.md  0007-targeted-visual-structure-extraction.md  0008-lane-compatible-llm-reranker.md  0010-exclude-unused-ragas-diskcache.md  (+13 more)
rfp_rag/: __init__.py  agent_orchestration.py  agent_stress.py  ask.py  build_index.py  business_readiness.py  chunking.py  contracts.py  corpus.py  cost_budget.py  evaluate.py  fake_provider.py  final_portfolio_scorecard.py  fresh_clone_smoke.py  gate_status.py  guardrail_eval.py  guardrails.py  hosted_demo_smoke.py  hosted_deployment_evidence.py  hosted_ops_summary.py  hybrid_retrieval.py  index_store.py  inspect_corpus.py  judge.py  observability_report.py  ops_metrics.py  ops_tool_server.py  paid_lane_plan.py  parse_sources.py  parser_bakeoff.py  parser_quality_eval.py  path_safety.py  portfolio_check.py  production_readiness.py  providers.py  rag_chain.py  report_check.py  rerank.py  retrieval_bakeoff.py  run_parser_bakeoff.py  (+39 more)
scripts/: deploy-hf-space.sh  hosted-evidence.sh  judge_ab.py  local-hosted-demo-smoke.sh  reviewer-10m.sh
tests/: conftest.py  test_agent_brains.py  test_agent_cli.py  test_agent_evaluate.py  test_agent_graph.py  test_agent_nodes.py  test_agent_orchestration.py  test_agent_real_smoke.py  test_agent_stress.py  test_agent_tools.py  test_ask.py  test_business_readiness.py  test_corpus.py  test_cost_budget.py  test_evaluate_report.py  test_final_portfolio_scorecard.py  test_fresh_clone_smoke.py  test_gate_status.py  test_gates.py  test_guardrail_eval.py  test_hf_space_deploy_assets.py  test_hosted_demo_smoke.py  test_hosted_deployment_evidence.py  test_hosted_evidence_script.py  test_hosted_ops_summary.py  test_hosted_smoke_workflow.py  test_hybrid_retrieval.py  test_index.py  test_judge.py  test_local_hosted_demo_smoke_script.py  test_observability_report.py  test_ops_tool_server.py  test_paid_lane_plan.py  test_parse_sources_cli.py  test_parser_bakeoff.py  test_parser_bakeoff_cli.py  test_parser_quality_eval.py  test_parser_quality_eval_cli.py  test_portfolio_check.py  test_production_readiness.py  (+39 more)
(+78 files in other folders)
