[project]
name = "rfp-rag"
version = "0.2.0"
description = "CSV-first RFP RAG baseline with LangChain real provider quality lane"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.3",
    "langchain-openai",
    "langchain-qdrant",
    "qdrant-client>=1.18",
    "ragas",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite",
    "langfuse>=3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "real: requires OPENAI_API_KEY and network access (deselect with '-m \"not real\"')",
]
