[project]
name = "rfp-rag"
version = "0.2.0"
description = "Source-first RFP RAG baseline with parsed HWP/PDF artifacts and LangChain real provider quality lane"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.3",
    "langchain-community<0.4",  # ragas 0.4.3 imports langchain_community.chat_models.vertexai
    "langchain-openai",
    "langchain-qdrant",
    "qdrant-client>=1.18",
    "ragas",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite",
    "langfuse>=3",  # optional tracing — LANGFUSE_* 키 없으면 no-op (rfp_rag/tracing.py)
    "pymupdf>=1.26",
    "rhwp-python>=0.7.0",
]

[tool.uv]
# Ragas declares diskcache as a core dependency, but this project does not use
# ragas.cache.DiskCacheBackend. Exclude it to avoid carrying an unused vulnerable
# transitive dependency in uv.lock.
exclude-dependencies = ["diskcache"]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "real: requires OPENAI_API_KEY and network access (deselect with '-m \"not real\"')",
]
