[project]
name = "rfp-rag"
version = "0.2.0"
description = "Source-first RFP RAG baseline with parsed HWP/PDF artifacts and LangChain real provider quality lane"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.9",  # langfuse.langchain CallbackHandler imports top-level langchain
    "langchain-core>=1.3",
    "langchain-openai",
    "langchain-qdrant",
    "qdrant-client>=1.18",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite",
    "langfuse>=3",  # optional tracing — LANGFUSE_* 키 없으면 no-op (rfp_rag/tracing.py)
    "pymupdf>=1.26",
    "rhwp-python>=0.7.0",
    "fastapi>=0.128",
    "uvicorn[standard]>=0.38",
]

[tool.uv]
# Historical note: ADR-0010 used this to exclude Ragas' unused diskcache edge.
# ADR-0021 removes Ragas itself; keeping this guard prevents accidental re-entry
# of the unused vulnerable transitive dependency.
exclude-dependencies = ["diskcache"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "real: requires OPENAI_API_KEY and network access (deselect with '-m \"not real\"')",
]
